<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CuidadesActivity"
    android:orientation="vertical"
    android:background="@color/colorAccent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="30sp"
        android:textColor="@color/colorTexto"
        android:text="@string/app_txtBienvenidad" />

    <Button
        android:id="@+id/btnSantiago"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_btnSantiago" />

    <Button
        android:id="@+id/btnBerlin"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_btnBerlin" />
</LinearLayout>